--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -33,13 +33,20 @@ header {
 }
 
 .fixed-menu {
-    margin: 0;
-    width: 100%;
+    margin: 0 -15px 0 15px;
+    max-width: 100%;
     padding: 15px;
     position: fixed;
     top: 0;
+    right: 0;
+    left: 0;
     z-index: 20;
     height: 100px;
+    &:before,
+    &:after {
+        content: " ";
+        display: table;
+    }
     @media screen and (min-width: 769px) {
         padding: 15px 50px;
     }
@@ -134,6 +141,9 @@ header {
     font-size: 48px;
     cursor: pointer;
     font-family: 'fontello', sans-serif;
+    @media handheld and (min-width: 20em), screen and (min-width: 20em) {
+        font-size: 48px;
+    }
     @media screen and (min-width: 769px) {
         display: none;
     }
@@ -170,7 +180,7 @@ header {
         overflow-y: auto;
     }
     .openbtn {
-        font-size: 20px
+        font-size: 48px
     }
     .closebtn {
         font-size: 40px;
